--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,10 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
