--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
@@ -22,6 +23,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
+    "smooth-scrollbar": "^8.8.1",
     "sweetalert2": "^11.5.1",
     "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4"
