--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-scrollbar": "^0.5.6",
+    "react-scrollbars-custom": "^4.1.1",
     "react-slick": "^0.29.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
