--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "bulma": "^0.9.4",
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-scrollbar": "^0.5.6",
     "react-scrollbars-custom": "^4.1.1",
